fixed homepage with alex's homepage

--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
   "bugs": {
     "url": "https://github.com/aadeschamps/ejax/issues"
   },
-  "homepage": "https://github.com/Liangalvin/ejax"
+  "homepage": "https://github.com/aadeschamps/ejax"
 }
